--- a/css/index.css
+++ b/css/index.css
@@ -2268,8 +2268,14 @@ width : 100%;        flex-direction: column;
 
     div.primer-win {
         width: 90vw;
-        height: 80vh;
+        height: auto;
+        padding-bottom: 2rem;
     }
+    button.my-modal-close {
+        top: 0;
+        right: 0;
+    }
+
 }
 @media screen and ( min-width: 320px ) and (max-width: 500px) {
     html {
@@ -2828,7 +2834,81 @@ width : 100%;        flex-direction: column;
 
     div.primer-win {
         width: 90vw;
-        height: 80vh;
+        height: auto;
+        padding-bottom: 2rem;
+    }
+    button.my-modal-close {
+        top: 0;
+        right: 0;
+    }
+
+
+}
+@media screen and ( min-width: 601px ) and (max-width: 700px) {
+    .billion3 {
+        width: 290%;
+    }
+}
+@media screen and ( min-width: 550px ) and (max-width: 600px) {
+    .billion3 {
+        width: 325%;
+    }
+}
+
+@media screen and ( min-width: 405px ) and (max-width: 450px) {
+    .billion3 {
+        width: 600%;
+    }
+}
+@media screen and ( min-width: 370px ) and (max-width: 404px) {
+    .billion3 {
+        width: 700%;
+    }
+}
+
+@media screen and ( min-width: 451px ) and (max-width: 499px) {
+    .billion3 {
+        width: 500%;
+    }
+}
+
+@media screen and ( min-width: 630px ) and (max-width: 700px) {
+    div.team-slider-win {
+        width: 125%;
+    }
+}
+@media screen and ( min-width: 480px ) and (max-width: 500px) {
+    div.team-slider-win {
+        width: 325%;
+    }
+}
+@media screen and ( min-width: 450px ) and (max-width: 479px) {
+    div.team-slider-win {
+        width: 350%;
+    }
+}
+@media screen and ( min-width: 420px ) and (max-width: 449px) {
+    div.team-slider-win {
+        width: 375%;
+    }
+}
+@media screen and ( min-width: 390px ) and (max-width: 419px) {
+    div.team-slider-win {
+        width: 400%;
+    }
+}
+@media screen and ( min-width: 360px ) and (max-width: 389px) {
+    div.team-slider-win {
+        width: 440%;
+    }
+}
+
+@media screen and ( min-width: 330px ) and (max-width: 359px) {
+    div.team-slider-win {
+        width: 480%;
+    }
+    .billion3 {
+        width:725%;
     }
 
 }
